# ex-obscura-npc-generator

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/: personalities.json  races.json  secrets.json
data/age/modifiers/: mod_occupations.json  mod_occupations_categories.json  (+1 more)
data/clothing/: details.json  men.json  women.json
data/names/: female_first.json  male_first.json  surnames.json
data/occupations/: academic.json  agriculture.json  armed_services.json  armed_services__army.json  armed_services__navy.json  clerical.json  entertainer.json  factory.json  factory__foundry.json  laborer.json  laborer__construction_worker.json  laborer__lumber.json  laborer__manufacturing.json  laborer__meatpacker.json  laborer__merchant_seaman.json  laborer__miner.json  laborer__railroad.json  occupations.json  professional.json  professional__artist.json  professional__journalism.json  professional__medical.json  professional__railroad.json  services.json  services__bookseller.json  services__firehouse.json  services__police.json  services__restaurant_or_diner.json  underworld.json
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
include/: GenerationContext.h  WorldSettings.h
include/generator/: ClothingGenerator.h  IdentityGenerator.h  NPCGenerator.h
include/npc/: NPC.h
include/rules/: ProbabilityMap.h
server/: main.cpp
src/generator/: ClothingGenerator.cpp  IdentityGenerator.cpp  NPCGenerator.cpp
(+4 files in other folders)
